--- a/lang/lang-en.json
+++ b/lang/lang-en.json
@@ -39,6 +39,8 @@
         "CAT": "Catalan: Native",
         "FR": "French: Basic",
         "ES": "Spanish: Native",
-        "EN": "English: Middle"
+        "EN": "English: Middle",
+        "DESC1": "Cross-Platform Application Developer, eager to put into practice all the knowledge acquired over the last few years.",
+        "DESC2": "Desire to learn something new every day to improve myself and evolve as a programmer."
     }
 }
