--- a/lang/lang-es.json
+++ b/lang/lang-es.json
@@ -30,7 +30,7 @@
         "FEF": "Realizar una formación HTML, CSS, Jquery, JavaScript y C # y finalmente desarrollar una web con ASP.Net utilizando los lenguajes comentados anteriormente",
         "FD": "Desarrollador independiente",
         "DATEFD": "Julio 2021 - Actualidad",
-        "FDF": "Desarrollar aplicaciones web conPHP, HTML, CSS, JavaScript, Jquery, ASP.Net",
+        "FDF": "Desarrollar aplicaciones web con PHP, HTML, CSS, JavaScript, Jquery, ASP.Net",
         "NAME": "Nombre",
         "PHONE": "Numero de telefono",
         "MESSAGE": "Mensaje",
@@ -40,7 +40,7 @@
         "FR": "Frances: Básico",
         "ES": "Castellano: Nativo",
         "EN": "Ingles: Intermedio",
-        "DESC1": "Soy desarrollador de aplicaciones multiplataforma y web buscando poner en practica los conocimientos adquiridos estos últimos años.",
+        "DESC1": "Soy desarrollador de aplicaciones multiplataforma y web buscando poner en práctica los conocimientos adquiridos estos últimos años.",
         "DESC2": "Con ganas de aprender algo nuevo cada día y poder evolucionar como programador."
     }
 }
