--- a/lang/lang-es.json
+++ b/lang/lang-es.json
@@ -17,7 +17,7 @@
         "AWD": "Ciclo superior de Desarrollo de Aplicaciones Web",
         "STAWD": "Desarrollo web con lenguajes como  PHP, Symphony, Angular, ASP.Net,... ",
         "DATEAWD": "Septiembre 2021 - Actualidad",
-        "PRLATO": "Lenguajes de programación && Herramientas",
+        "PRLATO": "Algunos lenguajes de programación && Herramientas",
         "SKEX": "Experiencia con programas como Code Blocks con C, Visual Studio con C#, Visual Studio Code, Unity, PostgreSQL, Microsoft Sql Server, MySql,XAMPP, Android Studio con Java,...",
         "SKW": "Web multidispositivo",
         "SKA": "Manejo de Adobe Photoshop y Adobe Illustrator",
