--- a/lang/lang-en.json
+++ b/lang/lang-en.json
@@ -17,7 +17,7 @@
         "AWD": "Application web development",
         "STAWD": "Web development with languages like PHP, Symphony, Angular, ASP.Net,... ",
         "DATEAWD": "September 2021 - Actuallity",
-        "PRLATO": "Programming Languages && Tools",
+        "PRLATO": "Some programming Languages && Tools",
         "SKEX": "Experience in programms like Code Blocks with C, Visual Studio with C#, Visual Studio Code, Unity, PostgreSQL, Microsoft Sql Server, MySql,XAMPP, Android Studio with Java,...",
         "SKW": "Web repsponsive",
         "SKA": "Adobe Photoshop and Adobe Illustrator managment",
