--- a/lang/lang-en.json
+++ b/lang/lang-en.json
@@ -19,7 +19,7 @@
         "DATEAWD": "September 2021 - Actuallity",
         "PRLATO": "Some programming Languages && Tools",
         "SKEX": "Experience in programms like Code Blocks with C, Visual Studio with C#, Visual Studio Code, Unity, PostgreSQL, Microsoft Sql Server, MySql,XAMPP, Android Studio with Java,...",
-        "SKW": "Web repsponsive",
+        "SKW": "Web responsive",
         "SKA": "Adobe Photoshop and Adobe Illustrator managment",
         "SKPO": "Pack Office managment",
         "DATEQA": "January 2021 - July 2021",
