--- a/lang/lang-en.json
+++ b/lang/lang-en.json
@@ -15,7 +15,7 @@
         "STCPAD": "Studies like web development, software developer, database development",
         "DATECPAD": "September 2019 - May 2021",
         "AWD": "Application web development",
-        "STAWD": "Web development with languages like PHP, Symphony, Angular, ASP.Net,... ",
+        "STAWD": "Web development with languages like PHP, Symfony, Angular, ASP.Net,... ",
         "DATEAWD": "September 2021 - Actuallity",
         "PRLATO": "Some programming Languages && Tools",
         "SKEX": "Experience in programms like Code Blocks with C, Visual Studio with C#, Visual Studio Code, Unity, PostgreSQL, Microsoft Sql Server, MySql,XAMPP, Android Studio with Java,...",
