--- a/lang/lang-en.json
+++ b/lang/lang-en.json
@@ -15,11 +15,11 @@
         "STCPAD": "Studies like web development, software developer, database development",
         "DATECPAD": "September 2019 - May 2021",
         "AWD": "Application web development",
-        "STAWD": "Web development with languages like PHP, Symfony, Angular, ASP.Net,... ",
+        "STAWD": "Web development with languages like PHP, Symphony, Angular, ASP.Net,... ",
         "DATEAWD": "September 2021 - Actuallity",
-        "PRLATO": "Some programming Languages && Tools",
+        "PRLATO": "Programming Languages && Tools",
         "SKEX": "Experience in programms like Code Blocks with C, Visual Studio with C#, Visual Studio Code, Unity, PostgreSQL, Microsoft Sql Server, MySql,XAMPP, Android Studio with Java,...",
-        "SKW": "Web responsive",
+        "SKW": "Web repsponsive",
         "SKA": "Adobe Photoshop and Adobe Illustrator managment",
         "SKPO": "Pack Office managment",
         "DATEQA": "January 2021 - July 2021",
